# blinkbin

./: .gitignore  README.md
backend/: .env.example  Dockerfile  pyproject.toml  requirements.txt
backend/app/: __init__.py  config.py  kafka_producer.py  main.py  models.py  redis_client.py
backend/app/routes/: paste.py
backend/worker/: expiry_worker.py
frontend/: _redirects  build.mjs  history.html  index.html  package-lock.json  package.json  serve.json  view.html
frontend/build-entry/: timelock-entry.js
frontend/css/: fonts.css  index.css
frontend/js/: constants.js  create.js  crypto.js  custom-select.js  history.js  timelock.js  ui.js  view.js
infra/: docker-compose.yml
infra/cloudflared/: config.yml
infra/nginx/: Dockerfile  nginx.conf
infra/redis/: redis.conf
