[project]
name = "blinkbin-backend"
version = "1.0.0"
description = "BlinkBin — zero-knowledge ephemeral secret sharing backend"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "redis[hiredis]>=5.0",
    "aiokafka>=0.11",
    "pydantic>=2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
